--- a/vue/src/resources/assets/css/main.css
+++ b/vue/src/resources/assets/css/main.css
@@ -19,10 +19,10 @@
   font-weight: normal;
 }
 
+a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
 .hidden { display: none !important; }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
